@startuml

title __SPHERE's Class Diagram__\n

  package engine {
    package engine.collision {
      package engine.collision.sphere {
        class SphereAABBCollision {
            + SphereAABBCollision()
            + resolve()
        }
      }
    }
  }
  

  package engine {
    package engine.collision {
      package engine.collision.sphere {
        abstract class SphereCollision {
            + SphereCollision()
        }
      }
    }
  }
  

  package engine {
    package engine.collision {
      package engine.collision.sphere {
        class SphereOBBCollision {
            + SphereOBBCollision()
            + resolve()
        }
      }
    }
  }
  

  package engine {
    package engine.collision {
      package engine.collision.sphere {
        class SphereSphereCollision {
            + SphereSphereCollision()
            + resolve()
        }
      }
    }
  }
  

  SphereAABBCollision -up-|> SphereCollision
  SphereCollision -up-|> Collision
  SphereOBBCollision -up-|> SphereCollision
  SphereSphereCollision -up-|> SphereCollision


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
